[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/RaceController.gd" id="1_7l0m4"]

[node name="Race" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7l0m4")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.08, 0.1, 0.12, 1)

[node name="TrackArea" type="Node2D" parent="."]
position = Vector2(24, 266)
z_index = 2

[node name="TrackBg" type="ColorRect" parent="TrackArea"]
unique_name_in_owner = true
offset_left = 0.0
offset_top = 0.0
offset_right = 1200.0
offset_bottom = 420.0
color = Color(0.2, 0.32, 0.18, 1)
z_index = -1

[node name="TrackBgSprite" type="Sprite2D" parent="TrackArea"]
unique_name_in_owner = true
visible = false
centered = false
z_index = -1

[node name="HorsesLayer" type="Node2D" parent="TrackArea"]
unique_name_in_owner = true
position = Vector2(0, 0)

[node name="FinishLine" type="ColorRect" parent="TrackArea"]
unique_name_in_owner = true
offset_left = 1120.0
offset_top = 0.0
offset_right = 1130.0
offset_bottom = 420.0
color = Color(0.95, 0.95, 0.95, 1)

[node name="RootMargin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 16

[node name="MainVBox" type="VBoxContainer" parent="RootMargin"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="TopBar" type="HBoxContainer" parent="RootMargin/MainVBox"]
layout_mode = 2

[node name="CoinLabel" type="Label" parent="RootMargin/MainVBox/TopBar"]
layout_mode = 2
text = "보유 코인: 0"
theme_override_font_sizes/font_size = 24

[node name="HorseCards" type="HBoxContainer" parent="RootMargin/MainVBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 10

[node name="BetPanel" type="HBoxContainer" parent="RootMargin/MainVBox"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="MinusButton" type="Button" parent="RootMargin/MainVBox/BetPanel"]
custom_minimum_size = Vector2(70, 50)
layout_mode = 2
text = "-50"

[node name="BetLabel" type="Label" parent="RootMargin/MainVBox/BetPanel"]
custom_minimum_size = Vector2(260, 50)
layout_mode = 2
text = "배팅 코인: 100"
vertical_alignment = 1

[node name="PlusButton" type="Button" parent="RootMargin/MainVBox/BetPanel"]
custom_minimum_size = Vector2(70, 50)
layout_mode = 2
text = "+50"

[node name="ConfirmBetButton" type="Button" parent="RootMargin/MainVBox/BetPanel"]
custom_minimum_size = Vector2(180, 50)
layout_mode = 2
text = "Confirm Bet"

[node name="TrackAreaUI" type="Control" parent="RootMargin/MainVBox"]
custom_minimum_size = Vector2(0, 420)
layout_mode = 2
size_flags_vertical = 3

[node name="BottomButtons" type="HBoxContainer" parent="RootMargin/MainVBox"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="RaceAgainButton" type="Button" parent="RootMargin/MainVBox/BottomButtons"]
custom_minimum_size = Vector2(180, 56)
layout_mode = 2
text = "Race Again"

[node name="BackButton" type="Button" parent="RootMargin/MainVBox/BottomButtons"]
custom_minimum_size = Vector2(180, 56)
layout_mode = 2
text = "Back to Menu"

[node name="ReportButton" type="Button" parent="RootMargin/MainVBox/BottomButtons"]
custom_minimum_size = Vector2(180, 56)
layout_mode = 2
text = "Report (TODO)"

[node name="ResultPanel" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -260.0
offset_top = -100.0
offset_right = 260.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="ResultPanel"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="ResultVBox" type="VBoxContainer" parent="ResultPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="ResultLabel" type="Label" parent="ResultPanel/MarginContainer/ResultVBox"]
layout_mode = 2
text = "우승: -"
horizontal_alignment = 1

[node name="SettlementLabel" type="Label" parent="ResultPanel/MarginContainer/ResultVBox"]
layout_mode = 2
text = "정산: 0"
horizontal_alignment = 1
